--- a/sage-hiring-web/package.json
+++ b/sage-hiring-web/package.json
@@ -18,9 +18,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.1",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "serve": "^11.3.0"
   },
   "scripts": {
+    "serve": "serve -s build -p 3000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
